--- a/capitalbikeshare.html
+++ b/capitalbikeshare.html
@@ -6,21 +6,21 @@
 	<script type='text/javascript' src='jquery.min.js'></script>
 	<script type='text/javascript' src='ICanHaz.js'></script>
   <script id="jqueryMobilePageTemplate" type="text/html">
-<div id='{{pageId}}' data-role='page'>
+    <div id='{{pageId}}' data-role='page' class='{{class}}'>
 
-	<div data-role='header'>
-		<h1>{{header}}</h1>
-	</div><!-- /header -->
+      <div data-role='header'>
+        <h1>{{header}}</h1>
+      </div><!-- /header -->
 
-	<div data-role='content'>	
-    {{{content}}}
-	</div><!-- /content -->
+      <div data-role='content'>	
+        {{{content}}}
+      </div><!-- /content -->
 
-	<div data-role='footer'>
-		<h4>{{{footer}}}</h4>
-	</div><!-- /footer -->
+      <div data-role='footer'>
+        <h4>{{{footer}}}</h4>
+      </div><!-- /footer -->
 
-</div><!-- /page -->
+    </div><!-- /page -->
   </script>
   <script id="stationTemplate" type="text/html">
     <div>
@@ -34,10 +34,40 @@
       Temporary{{temporary}}<br/>
       # Bikes: {{nbBikes}}<br/>
       # Docks: {{nbEmptyDocks}}<br/>
+      <a data-role='button' href='#map'>Map</a>
+      <a data-role='button' href='#map?lat={{lat}}&long={{long}}'>Map</a>
+
+    </div>
+  </script>
+  <script id="mapTemplate" type='text/html'>
+    <div data-role="content" style="width:100%; height:100%; padding:0;">
+      <div id="map_canvas" style="width:100%; height:50%;"></div>
     </div>
   </script>
 
-  <script>
+
+  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+  <script type="text/javascript">
+  // When map page opens get location and display map
+  $('.station_map').live("pagecreate", function() {
+    if(navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(function(position){
+        initializeMap(position.coords.latitude,position.coords.longitude);
+      });
+    }
+  });
+
+  function initializeMap(lat,lng) {
+    var latlng = new google.maps.LatLng(lat, lng);
+    var myOptions = {
+      zoom: 8,
+      center: latlng,
+      mapTypeId: google.maps.MapTypeId.ROADMAP
+    };
+
+    var map = new google.maps.Map(document.getElementById("map_canvas"),myOptions);
+  }
+
     $(document).bind("mobileinit", function(){
       $.mobile.autoInitialize = false;
     });
@@ -62,14 +92,14 @@
 
       for (i=0;i<stationData.length;i++){
         station = stationData[i];
-        pageId = station.id
-        header = station.name
-        console.log(station)
-        global = station
-        content = ich.stationTemplate(station)
-        console.log(content.html())
-        footer = "<a href='#index'>Index</a>"
-        $('body').append(ich.jqueryMobilePageTemplate({pageId:pageId,header:header,content:content.html(),footer:footer}));
+        templateData = {
+          class: "station",
+          pageId: station.id,
+          header: station.name,
+          content: ich.stationTemplate(station).html(),
+          footer: "<a data-role='button' href='#index'>Index</a>"
+        }
+        $('body').append(ich.jqueryMobilePageTemplate(templateData));
       }
 
       $.mobile.initializePage();
@@ -79,5 +109,21 @@
   <script type="text/javascript" src="http://query.yahooapis.com/v1/public/yql?q=select%20*%20from%20xml%20where%20url%3D'http%3A%2F%2Fwww.capitalbikeshare.com%2Fstations%2FbikeStations.xml'&format=json&diagnostics=true&callback=handleData"></script>
 	<script type='text/javascript' src='http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.js'></script>
 </head> 
-<body></body>
+<body>
+  <div id='map' data-role='page' class='station_map' style="width:100%; height:100%;">
+
+    <div data-role='header'>
+      <h1>MAP!</h1>
+    </div><!-- /header -->
+
+    <div data-role="content" style="width:100%; height:100%; padding:0;">
+      <div id="map_canvas" style="width:100%; height:50%;"></div>
+    </div>
+
+    <div data-role='footer'>
+      <h4>MAP!</h4>
+    </div><!-- /footer -->
+
+  </div><!-- /page -->
+</body>
 </html>
