--- a/capitalbikeshare.html
+++ b/capitalbikeshare.html
@@ -34,9 +34,7 @@
       Temporary{{temporary}}<br/>
       # Bikes: {{nbBikes}}<br/>
       # Docks: {{nbEmptyDocks}}<br/>
-      <a data-role='button' href='#map'>Map</a>
-      <a data-role='button' href='#map?lat={{lat}}&long={{long}}'>Map</a>
-
+      <a data-role='button' onClick='lat={{lat}};long={{long}}' href='#map'>Map</a>
     </div>
   </script>
   <script id="mapTemplate" type='text/html'>
@@ -44,7 +42,6 @@
       <div id="map_canvas" style="width:100%; height:50%;"></div>
     </div>
   </script>
-
 
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
   <script type="text/javascript">
@@ -93,7 +90,7 @@
       for (i=0;i<stationData.length;i++){
         station = stationData[i];
         templateData = {
-          class: "station",
+          "class": "station",
           pageId: station.id,
           header: station.name,
           content: ich.stationTemplate(station).html(),
@@ -101,6 +98,9 @@
         }
         $('body').append(ich.jqueryMobilePageTemplate(templateData));
       }
+
+      if (document.location.hash == "")
+        document.location.hash = "#index"
 
       $.mobile.initializePage();
     });
@@ -117,7 +117,7 @@
     </div><!-- /header -->
 
     <div data-role="content" style="width:100%; height:100%; padding:0;">
-      <div id="map_canvas" style="width:100%; height:50%;"></div>
+      <div id="map_canvas" style="width:100%; height:100%;"></div>
     </div>
 
     <div data-role='footer'>
