--- a/capitalbikeshare.html
+++ b/capitalbikeshare.html
@@ -6,6 +6,7 @@
 	<script type='text/javascript' src='jquery.min.js'></script>
 	<script type='text/javascript' src='ICanHaz.js'></script>
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+
   <script id="jqueryMobilePageTemplate" type="text/html">
     <div id='{{pageId}}' data-role='page' class='{{class}}'>
       <div data-role='header'><h1>{{header}}</h1></div>
@@ -108,7 +109,7 @@
 
   </script>
   <script type="text/javascript" src="http://query.yahooapis.com/v1/public/yql?q=select%20*%20from%20xml%20where%20url%3D'http%3A%2F%2Fwww.capitalbikeshare.com%2Fstations%2FbikeStations.xml'&format=json&diagnostics=true&callback=handleData"></script>
-	<script type='text/javascript' src='http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.js'></script>
+	<script type='text/javascript' src='jquery.mobile-1.0a3.min.js'></script>
 </head> 
 <body>
 </body>
