--- a/capitalbikeshare.html
+++ b/capitalbikeshare.html
@@ -32,7 +32,7 @@
       <h1>Bikes: {{nbBikes}}<h1>
       <h1>Docks: {{nbEmptyDocks}}</h1>
       <div data-inline='true'>
-        <a data-inline='true' data-role='button' href='http://mikeymckay.cloudant.com/capital-bikeshare/_design/app/index.html#/station/{{id}}'>Usage</a>
+        <a data-inline='true' data-role='button' href='http://mikeymckay.couchone.com/capital-bikeshare/_design/app/index.html#/station/{{id}}'>Usage</a>
         <a data-inline='true' data-role='button' onClick='lat={{lat}};long={{long}}' href='#map'>Map</a>
       </div>
     </div>
